Fix Projects overflow bug

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -133,7 +133,7 @@ button:hover {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -1;
-  opacity: 0.07;
+  opacity: 0.09;
 }
 
 * {
@@ -153,7 +153,7 @@ button:hover {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  padding-left: 20%;
+  padding-left: 13%;
 }
 
 .projects .projects__wrapper {
@@ -162,8 +162,9 @@ button:hover {
           align-items: flex-start;
   width: auto;
   margin-top: 20px;
-  padding-right: 15%;
+  padding-right: 13%;
   font-family: "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  overflow: hidden;
   display: -ms-grid;
   display: grid;
 }
@@ -189,5 +190,12 @@ button:hover {
 .projects .glide .glide__slides {
   height: 80vh;
   width: 100%;
+}
+
+.projects .glide .glide__slides .glide__slide__img {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 /*# sourceMappingURL=main.css.map */
